# video2mp3

./: .gitignore  README.md  ingress.yaml
auth/: Dockerfile  README.md  init.sql  pyproject.toml  server.py
auth/auth/: server.py
auth/manifests/: auth-deploy.yaml  configmap.yaml  secrets.sample.yaml
converter/: Dockerfile  README.md  consumer.py  pyproject.toml
converter/convert/: to_mp3.py
converter/manifests/: converter-deploy.yaml
gateway/: Dockerfile  auth.py  pyproject.toml  server.py  storage.py
gateway/gateway/: auth.py  storage.py
gateway/manifests/: configmap.yaml  gateway-deploy.yaml  services.yaml
notifications/: Dockerfile  README.md  consumer.py  pyproject.toml
notifications/manifests/: configmap.yaml  notifications-deploy.yaml  secrets.sample.yaml
rabbit/manifests/: ingress.yaml  secrets.sample.yaml  service.yaml  statefulset.yaml
