[tool.poetry]
name = "auth"
version = "0.1.0"
description = "A Flask app used to authenticate users and provide them with a JWT token."
authors = ["Fernando Cordeiro <fernando@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
flask = "^2.2.2"
pyjwt = "^2.6.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
