[tool.poetry]
name = "convert"
version = "1.0.0"
description = "Converts videos to mp3"
authors = ["Fernando Cordeiro <fernando@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pika = "^1.3.1"
pymongo = "^4.3.3"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
