[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Getaway for video2mp3 microservices"
authors = ["Fernando Cordeiro <fernando_cordeiro@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pika = "^1.3.1"
requests = "^2.28.2"
Flask = "^2.2.2"
bson = "*"
flask-pymongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
