[tool.poetry]
name = "notifications"
version = "0.1.0"
description = "Notifications service"
authors = ["Fernando Cordeiro <fernando_cordeiro@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
